--- a/a/index.html
+++ b/a/index.html
@@ -8,6 +8,7 @@
 
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/flat-ui.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -45,66 +46,100 @@
           </div>
         </div>
         <div class="col-xs-6" ng-controller="NewController as newCtrl">
-          <h4>Input control</h4>
-          <form class="form-horizontal" role="form">
-            <div class="form-group">
-              <label for="link" class="col-lg-2 control-label">Link</label>
-              <div class="col-lg-8">
-                <input type="text" class="form-control" ng-model="controlURL" placeholder="Link">
-              </div>
-              <div class="col-lg-2">
-                <a href class="btn btn-info" ng-click="newCtrl.fetch(controlURL)">Try fetch</a>
+          <div class="col-xs-6">
+            <h4>Input control <span ng-class="{ 'text-success':newCtrl.ready, 'text-danger':!newCtrl.ready }">●</span></h4>
+          </div>
+          <div class="col-xs-6">
+            <button class="btn btn-default" type="button" ng-click="newCtrl.reset()">Reset</button>
+          </div>
+          <form class="" role="form">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="input-group">
+                  <input type="text" class="form-control" ng-model="newCtrl.controlLink" placeholder="Link">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" ng-click="newCtrl.fetch(newCtrl.controlLink)">Fetch</button>
+                  </span>
+                </div>
               </div>
             </div>
-            <div class="form-group">
-              <label for="name" class="col-lg-2 control-label">Name</label>
-              <div class="col-lg-10">
+            <div class="row">
+              <div class="col-xs-6">
                 <input type="text" class="form-control" ng-model="newCtrl.controlName" placeholder="Name">
               </div>
-            </div>
-            <div class="form-group">
-              <select data-toggle="select" class="form-control select select-default" ng-model="newCtrl.controlLicense">
-                <option ng-repeat="license in newCtrl.licenses">{{ license.get('name') }}</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="auth" class="col-lg-2 control-label">Author</label>
-              <div class="col-lg-10">
+              <div class="col-xs-6">
                 <input type="text" class="form-control" ng-model="newCtrl.controlAuthor" placeholder="Author">
               </div>
             </div>
-            <div class="form-group">
-              <label for="lang" class="col-lg-2 control-label">Language</label>
-              <select data-toggle="select" class="form-control select select-default" ng-model="newCtrl.controlLang">
-                <option ng-repeat="language in newCtrl.languages">{{ language.get('name') }}</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="desc" class="col-lg-2 control-label">Description</label>
-              <div class="col-lg-10">
+            <div class="row">
+              <div class="col-xs-12">
                 <textarea class="form-control" ng-model="newCtrl.controlDesc" placeholder="Description"></textarea>
               </div>
             </div>
-            <div class="form-group">
-              <label for="tags" class="col-lg-2 control-label">Tags</label>
-              <div class="col-lg-10">
-                <input name="tagsinput" id="tags" class="tagsinput form-control" value=""/>
+            <div class="row">
+              <div class="col-xs-6">
+                <select data-toggle="select" class="form-control" ng-model="newCtrl.controlLicense">
+                  <option ng-repeat="license in newCtrl.licenses">{{ license.get('name') }}</option>
+                </select>
+              </div>
+              <div class="col-xs-6">
+                <select data-toggle="select" class="form-control" ng-model="newCtrl.controlLang">
+                  <option ng-repeat="language in newCtrl.languages">{{ language.get('name') }}</option>
+                </select>
               </div>
             </div>
-            <div class="fom-group">
-              <label for="images" class="col-lg-2 control-label">Images</label>
-              <input type="file" id="imageupload" multiple>
-            </div>
-            <div class="form-group">
-              <div class="col-lg-offset-2 col-lg-10">
-                <button class="btn btn-primary" ng-click="newCtrl.send()">Skicka in</button>
+            <div class="row">
+              <div class="col-xs-12">
+                <input type="text" class="tagsinput form-control" id="tags" name="tagsinput"/>
               </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <a href ng-repeat="tag in newCtrl.allTags" ng-click="newCtrl.selectTag(tag)" class="label label-default">{{ tag.get('name') }}</a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-6">
+                <label for="previewupload" class="col-lg-2 control-label">STILLS</label>
+                <input type="file" id="previewupload" multiple>
+              </div>
+              <div class="col-xs-6">
+                <label for="gifupload" class="col-lg-2 control-label">GIFS</label>
+                <input type="file" id="gifupload" multiple>
+              </div>
+            </div>
+            <div class="row">
+              <button class="btn btn-primary btn-block" ng-click="newCtrl.send()">Skicka in</button>
             </div>
           </form>
-          <div>
-            <a href ng-repeat="tag in newCtrl.allTags" ng-click="newCtrl.selectTag(tag)"><span class="label label-default">{{ tag.get('name') }}</span></a>
-          </div>
           <div class="error">
+          </div>
+          <div>
+            <h6>New tag</h6>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="newTag" placeholder="Tag">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="newCtrl.newTag(newTag)">Add</button>
+              </span>
+            </div>
+          </div>
+          <div>
+            <h6>New license</h6>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="newLicense" placeholder="License">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="newCtrl.newLicense(newLicense)">Add</button>
+              </span>
+            </div>
+          </div>
+          <div>
+            <h6>New language</h6>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="newLanguage" placeholder="License">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="newCtrl.newLanguage(newLanguage)">Add</button>
+              </span>
+            </div>
           </div>
         </div>
       </div>
